borsh-derive/src/internals/serialize/enums/snapshots/borsh_discriminant_true-2.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerializeAsync for X {
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            X::A => 0,
            X::B => 20,
            X::C => 20 + 1,
            X::D => 20 + 1 + 1,
            X::E => 10,
            X::F => 10 + 1,
        };
        writer.write_u8(variant_idx).await?;
        ::core::result::Result::Ok(())
    }
}
