borsh-derive/src/internals/serialize/enums/snapshots/borsh_discriminant_true.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::ser::BorshSerialize for X {
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            X::A => 0,
            X::B => 20,
            X::C => 20 + 1,
            X::D => 20 + 1 + 1,
            X::E => 10,
            X::F => 10 + 1,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        Ok(())
    }
}
