borsh-derive/src/internals/serialize/enums/snapshots/borsh_skip_struct_variant_all_fields-2.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerializeAsync for AAB {
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            AAB::B { .. } => 0u8,
            AAB::NegatedVariant { .. } => 1u8,
        };
        writer.write_u8(variant_idx).await?;
        match self {
            AAB::B { .. } => {}
            AAB::NegatedVariant { beta, .. } => {
                <String as borsh::BorshSerializeAsync>::serialize(beta, writer).await?;
            }
        }
        ::core::result::Result::Ok(())
    }
}
