borsh-derive/src/internals/serialize/enums/snapshots/borsh_skip_struct_variant_all_fields.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerialize for AAB {
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            AAB::B { .. } => 0u8,
            AAB::NegatedVariant { .. } => 1u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            AAB::B { .. } => {}
            AAB::NegatedVariant { beta, .. } => {
                <String as borsh::BorshSerialize>::serialize(beta, writer)?;
            }
        }
        ::core::result::Result::Ok(())
    }
}
