borsh-derive/src/internals/serialize/enums/snapshots/borsh_skip_tuple_variant_field-2.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerializeAsync for AATTB {
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            AATTB::B(..) => 0u8,
            AATTB::NegatedVariant { .. } => 1u8,
        };
        writer.write_u8(variant_idx).await?;
        match self {
            AATTB::B(_id0, _id1) => {}
            AATTB::NegatedVariant { beta, .. } => {
                <u8 as borsh::BorshSerializeAsync>::serialize(beta, writer).await?;
            }
        }
        ::core::result::Result::Ok(())
    }
}
