borsh-derive/src/internals/serialize/enums/snapshots/mixed_with_unit_variants-2.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerializeAsync for X {
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            X::A(..) => 0u8,
            X::B => 1u8,
            X::C { .. } => 2u8,
            X::D => 3u8,
        };
        writer.write_u8(variant_idx).await?;
        match self {
            X::A(id0) => {
                <u16 as borsh::BorshSerializeAsync>::serialize(id0, writer).await?;
            }
            X::C { x, y, .. } => {
                <i32 as borsh::BorshSerializeAsync>::serialize(x, writer).await?;
                <i32 as borsh::BorshSerializeAsync>::serialize(y, writer).await?;
            }
            _ => {}
        }
        ::core::result::Result::Ok(())
    }
}
